# Projet-Bryan

Arcade/: Doc.docx  Makefile  main.cpp
Arcade/Games/: Makefile
Arcade/Graphicals/: Makefile
Arcade/games/: explications
Arcade/lib/: explication.txt
Area/: README.md  about.json  docker-compose.yml
Area/app_mobile/: README.md  pubspec.yaml
Area/serveur/: Dockerfile  package-lock.json
Area/web_app/: Dockerfile  package-lock.json  package.json
Epicture/: Doc-Epicture.docx  README.md  pubspec.yaml
Portefolio/: PDOConnection.php  add_manga.php  add_manga.phtml  add_sport.php  add_sport.phtml  admin.php  admin.phtml  config.php  contact.php  contact.phtml  delete_manga.php  delete_sport.php  diplome.php  diplome.phtml  edit_manga.php  edit_manga.phtml  edit_sport.php  edit_sport.phtml  etude.php  etude.phtml  index.php  index.phtml  layout.phtml  manga.php  manga.phtml  portefolio.sql  sport.php  sport.phtml
R-Type/: CMakeLists.txt  conanfile.txt
R-Type/Documentation/: r-type-protocole-documentation.txt
R-Type/client/: Client.cpp  Client.hpp  main.cpp
R-Type/client/Game/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  IScreenView.hpp  ScreenViewFactory.hpp
R-Type/client/Game/GamePannel/: IStage.hpp  StageFactory.hpp
R-Type/client/Game/GamePannel/Loose/: Loose.cpp  Loose.hpp
R-Type/client/Game/GamePannel/Player/: Player.cpp  Player.hpp
R-Type/client/Game/GamePannel/Stage1/: Stage1.cpp  Stage1.hpp
R-Type/client/Game/GamePannel/Stage2/: Stage2.cpp  Stage2.hpp
R-Type/client/Game/GamePannel/Stage3/: Stage3.cpp  Stage3.hpp
R-Type/client/Game/GamePannel/Win/: Win.cpp  Win.hpp
R-Type/client/Game/Menu/: Menu.cpp  Menu.hpp
R-Type/client/Game/Settings/: Settings.cpp  Settings.hpp
R-Type/client/Game/map/: loose.txt  menu.txt
R-Type/client/Graphical/: GraphFactory.hpp  IGraphical.hpp  Sfml.cpp  Sfml.hpp
R-Type/client/Graphical/GraphObject/: Asset.hpp  GraphObject.cpp  GraphObject.hpp
R-Type/server/: main.cpp
R-Type/serveur_boost/: index  main.cpp  server.cpp  server.hpp
(+140 files in other folders)
